Changelog
=========

2.3.4dev-bethel.1 (unreleased)
------------------------------

- merge current state of 2.3.4 (changeset:   508:a9b4b90e6b9f) with 
  2.3-bethel-content-layout

2.3.4 (unreleased)
------------------

* Correctly add HEAD support to adding views.

2.3.3 (2011-07-27)
------------------

* Fix some links in preview tab and error messages.

* Fix SMI if you access it and Zope doesn't report any role for you.

2.3.2-bethel.3 (2011-08-17)
---------------------------

* allow any container to be a localsite (Bethel's policy allows certain local
  utilities to be placed within folders, as such they need to have the localsite
  capability)

2.3.2-bethel.2 (2011-08-05)
---------------------------

* add request['SERVER_URL'] to sidebar cache key.  We don't want the sidebar to
  be the same across all vhosts.

2.3.2-bethel.1 (2011-07-07)
---------------------------

* Bethel's first release for Silva 2.3

2.3.2 (2010-02-07)
------------------

* Improve CSS.

* Review and improve error pages and theirs CSS.

* Review tab interfaces (introduce a new grouping interfaces).

* Add more support for INonPublishable content object.

* Add more support to skin the SMI.

* Fix various small bugs.

2.3.1 (2010-12-20)
------------------

* Add support to skin the SMI: you can now provide your own CSS for the SMI.
  All hardcoded CSS have been removed.

* Tab preview for File and Image have been modernized.


2.3 (2010-10-18)
----------------

* The access tab is now implemented in here.

* Middleground actions, navigation, error pages and layout have been
  improved.

* Review permissions on buttons and tabs.

* Implement a working Over quota error page.


2.3b1 (2010-07-15)
------------------

* A SMI layout defined using ``silva.core.layout`` has been added. It
  includes some CSS and JS resources.

* Forms now use ``zeam.form``.

* Flash messages now use ``silva.core.messages``.

* It is possible to make SMI views and forms using only